Fix ctor